--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 body {
     margin: 0;
     padding: 0;
+     font-family: "Montserrat", sans-serif;
 }
 
 header {
     width: 100%;
     height: 100vh;
-    background: url(header_bg.webp);
+    background-image: url('footer_bg.png');
     background-size: cover;
     display: flex;
 }
