--- a/style.css
+++ b/style.css
@@ -76,6 +76,12 @@ section h1 {
     align-items: center;
     justify-content: center;
 }
+.section_row img {
+    transition: transform 0.3s ease-in-out;
+}
+.section_row img:hover {
+    transform: scale(0.9);
+}
 .section_item {
     height: 10vw;
     margin: 0 4em 4em 4em;
